Fix footer too big

--- a/css/main.css
+++ b/css/main.css
@@ -761,6 +761,7 @@ footer {
   }
   #main footer {
     font-size: .8em;
+    max-height: 350px;
   }
 }
 /*# sourceMappingURL=main.css.map */
